force-app/main/default/objects/Transaction_Verification__c/Transaction_Verification__c.object-meta.xml
<CustomObject>
    <label>Transaction Verification</label>
    <nameField>
        <label>Transaction Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>