force-app/main/default/objects/Transaction_Verification__c/fields/CAR__c.field-meta.xml
<CustomField>
    <fullName>CAR__c</fullName>
    <description>FSC</description>
    <label>CAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>