force-app/main/default/objects/Transaction_Verification__c/fields/Certificate_Relation__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Relation__c</fullName>
    <description>FSC</description>
    <label>Certificate Relation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>