force-app/main/default/objects/Transaction_Verification__c/fields/Date_Identified__c.field-meta.xml
<CustomField>
    <fullName>Date_Identified__c</fullName>
    <description>FSC</description>
    <label>Date Identified</label>
    <type>Date</type>
</CustomField>