force-app/main/default/objects/Transaction_Verification__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <description>FSC</description>
    <label>Findings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Sales Reported (10.2 a)</fullName>
            </value>
            <value>
                <fullName>Non Conformity (10.2 b)</fullName>
            </value>
            <value>
                <fullName>Suspension (10.2 b)</fullName>
            </value>
            <value>
                <fullName>Termination (10.2 b)</fullName>
            </value>
            <value>
                <fullName>Removal of Site (10.2 b)</fullName>
            </value>
            <value>
                <fullName>Recommendation for investigation (10.2 c)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>