force-app/main/default/objects/Transaction_Verification__c/fields/Opportunity_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Certificate</label>
    <referenceTo>Opportunity_Certificate__c</referenceTo>
    <relationshipLabel>Transaction Verifications</relationshipLabel>
    <relationshipName>Transaction_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>