force-app/main/default/objects/Transaction_Verification__c/fields/Participating_Site__c.field-meta.xml
<CustomField>
    <fullName>Participating_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FSC</description>
    <label>Participating Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Verifications</relationshipLabel>
    <relationshipName>Transaction_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>