force-app/main/default/objects/Transaction_Verification__c/fields/SCS_Notes__c.field-meta.xml
<CustomField>
    <fullName>SCS_Notes__c</fullName>
    <description>FSC</description>
    <label>SCS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>